==> xiaoxiang781216/nuttx/arch/risc-v/src/hpm6750/hpm6750_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial/serial.h>
#include <nuttx/spinlock.h>
#include <arch/board/board.h>
#include "riscv_internal.h"
#include "chip.h"
#include "hpm6750.h"
#include "hpm6750_config.h"
#include "hpm6750_iomux.h"
#include "hpm6750_pmic_iomux.h"
#include "hpm6750_lowputc.h"
#include "hpm6750_serial.h"
#    define CONSOLE_DEV     g_uart0port     /* UART0 is console */
#    define TTYS0_DEV       g_uart0port     /* UART0 is ttyS0 */
#    define SERIAL_CONSOLE  1
#    define TTYS0_DEV       g_uart0port     /* UART0 is ttyS0 */
#    define SERIAL_CONSOLE  1

static int up_setup(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  hpm6750_init_uart_pins(priv);

  hpm6750_uart_init(priv);

  return OK;
}

static int up_interrupt(int irq, void *context, void *arg)
{
  struct uart_dev_s *dev = (struct uart_dev_s *)arg;
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  uint32_t irq_id;

  irq_id = up_serialin(priv, UART_IIR_OFFSET) & UART_IIR_INTRID_MASK;

  /* Length of uart rx data transfer arrived interrupt */

  if (irq_id == uart_intr_id_rx_data_avail)
    {
      /* Receive Data ready */

      uart_recvchars(dev);
    }

  /* Tx fifo ready interrupt,auto-cleared when data is pushed */

  if (irq_id == uart_intr_id_tx_slot_avail)
    {
      /* Transmit data request interrupt */

      uart_xmitchars(dev);
    }

  return OK;
}

static void up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  irqstate_t flags = enter_critical_section();

  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->im |= UART_IER_ERBI_MASK;
#endif
    }
  else
    {
      priv->im &= ~UART_IER_ERBI_MASK;
    }

  up_serialout(priv, UART_IER_OFFSET, priv->im);
  leave_critical_section(flags);
}

static bool up_rxavailable(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  return ((up_serialin(priv, UART_LSR_OFFSET) & UART_LSR_DR_MASK) != 0)
         ? true : false;
}

static void up_txint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  irqstate_t flags;

  flags = enter_critical_section();
  if (enable)
    {
      /* Enable the TX interrupt */

#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->im |= UART_IER_ETHEI_MASK;
      up_serialout(priv, UART_IER_OFFSET, priv->im);

      /* Fake a TX interrupt here by just calling uart_xmitchars() with
       * interrupts disabled (note this may recurse).
       */

      uart_xmitchars(dev);
#endif
    }
  else
    {
      /* Disable the TX interrupt */

      priv->im &= ~UART_IER_ETHEI_MASK;
      up_serialout(priv, UART_IER_OFFSET, priv->im);
    }

  leave_critical_section(flags);
}

static bool up_txready(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  /* Return TRUE if the TX FIFO is not full */

  return (up_serialin(priv, UART_LSR_OFFSET) & UART_LSR_THRE_MASK)
         ? true : false;
}

static bool up_txempty(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  /* Return TRUE if the TX wartermak is pending */

  return (up_serialin(priv, UART_LSR_OFFSET) & UART_LSR_TEMT_MASK)
         ? true : false;
}
